--- a/styles/style.css
+++ b/styles/style.css
@@ -5,3 +5,28 @@
 body{
     background-color: #F5F6F8;
 }
+
+:root{
+    --primary: rgba(0, 0, 0, 0.8);
+    --secondary: rgba(255, 0, 0, 0.8);
+}
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--secondary) var(--primary);
+  }
+  
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: var(--primary);
+    border-radius: 5px;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--secondary);
+    border-radius: 14px;
+    border: 3px solid var(--primary);
+  }
